feat: get items from shopping cart api
